--- a/views/solutions/ito.ejs
+++ b/views/solutions/ito.ejs
@@ -73,19 +73,13 @@
                             <div class="col-md-6">
                                 <div class="iot-gathers-massive-img-point">
                                     <div class="iot-gathers-massive-img iot-gathers-massive-img01"></div>
-                                    <p>截止2019年，20%的物联网设备将采用区块链技术
-                                        <a class="teal-link"
-                                            href="https://www.idc.com/research/viewtoc.jsp?containerId=US40755816"
-                                            target="_blank" rel="noopener">Source</a></p>
+                                    <p>截止2019年，20%的物联网设备将采用区块链技术</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="iot-gathers-massive-img-point">
                                     <div class="iot-gathers-massive-img iot-gathers-massive-img02"></div>
-                                    <p>全球物联网设备的数量将从2017年的270亿增长至2030年的1250亿
-                                        <a class="teal-link"
-                                            href="https://technology.ihs.com/596542/number-of-connected-iot-devices-will-surge-to-125-billion-by-2030-ihs-markit-says"
-                                            target="_blank" rel="noopener">Source</a></p>
+                                    <p>全球物联网设备的数量将从2017年的270亿增长至2030年的1250亿</p>
                                 </div>
                             </div>
                         </div>
