--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -172,7 +172,7 @@
                 <div class="email subheader" itemscope>
                     <a href="mailto:contact@openledger.info" itemprop="email">106316519@qq.com</a>
                 </div>
-                <div class="subheader">Denmark</div>
+                <!-- <div class="subheader">Denmark</div>
                 <div class="footer-address">
                     <div itemscope itemtype="http://schema.org/Organization">
                         <span itemprop="name">OpenLedger ApS</span>,
@@ -182,10 +182,10 @@
                             <div itemprop="addressLocality">Copenhagen, Denmark</div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6">
-                <div class="header">Follow Us</div>
+                <!-- <div class="header">Follow Us</div>
                 <div class="socials" itemscope itemtype="http://schema.org/Organization">
                     <link itemprop="url" href="">
                     <a itemprop="sameAs" href="https://www.facebook.com/OpenLedgerDC/" target="_blank"><i
@@ -196,7 +196,7 @@
                             class="fab fa-twitter"></i></a>
                     <a itemprop="sameAs" href="https://www.youtube.com/channel/UCZHkjzM5Vp5RH0H_XGBtS0g"
                         target="_blank"><i class="fab fa-youtube"></i></a>
-                </div>
+                </div> -->
                 <div class="copyright">© 2014—2019 OpenLedger. 版权所有.</div>
             </div>
         </div>
