--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -104,7 +104,7 @@
                                     <li id="menu-item-1458" itemprop="name"
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1458">
                                         <a title="Logistics" href="/solutions/logistics" itemprop="url"
-                                            class="dropdown-item depth-1">后勤<span></span></a>
+                                            class="dropdown-item depth-1">物流运输<span></span></a>
                                     </li>
                                     <li id="menu-item-1620" itemprop="name"
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1620">
