--- a/views/services/research-and-development.ejs
+++ b/views/services/research-and-development.ejs
@@ -40,8 +40,8 @@
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
                     <h1>区块链研发服务</h1>
-                    <div class="h2-banner">用区块链改变您的业务</div>
-                    <div class="text">OpenLedger确保将区块链技术完美地集成到您的运营和当前平台中。</div>
+                    <div class="h2-banner">使用区块链改变您的业务</div>
+                    <div class="text">OpenLedger确保将区块链技术完美地整合到您的运营和当前平台中。</div>
                     <a href="#contact" class="link">获取免费报价</a>
                     <div class="bg"></div>
                 </div>
@@ -73,7 +73,7 @@
 
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-1"></div>
-                            <h3>跨国大型公司</h3>
+                            <h3>国际企业</h3>
                         </div>
 
                         <div class="col-lg-4 df mw-300">
@@ -83,7 +83,7 @@
 
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-1"></div>
-                            <h3>任何非营利组织</h3>
+                            <h3>非营利组织</h3>
                         </div>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                         为了使区块链实施对您的业务尽可能有效，OpenLedger提供了我们自己的研发部门的服务。
                         <br>
                         <br>
-                        我们的团队包括八位内部专家，他们参与每个项目，确定挑战和业务问题，并为您当前的业务案例提供最有效的解决方案。
+                        我们的团队包括多名内部专家，他们参与每个项目，确定所面临的挑战和业务问题，并为您当前的业务需求提供最有效的解决方案。
                     </div>
                 </div>
             </div>
@@ -105,9 +105,7 @@
         <div class="manufacturer-scheme research-manufacturer-scheme">
             <div class="container">
                 <div class="manufacturer-scheme-content">
-                    <img class="manufacturer-dots"
-                        src="/images/Solutions/Logistics/dots.svg"
-                        alt="Dots">
+                    <img class="manufacturer-dots" src="/images/Solutions/Logistics/dots.svg" alt="Dots">
                     <img class="manufacturer-image manufacturer-image-1170"
                         src="/images/Services/Research/scheme1170.svg"
                         alt="OpenLedger research and development department">
@@ -175,34 +173,35 @@
         </div>
 
         <% include ../common/quote.ejs %>
-        
+
         <div class="research-blockchain-consulting">
             <div class="container">
                 <div>
                     <h2>区块链咨询</h2>
-                    <div class="h4 gor-100">在OpenLedger，我们在区块链实施的各个方面提供技术和业务相关的帮助。</div>
+                    <div class="h4 gor-100">在OpenLedger，我们为区块链的实施提供技术和业务方面的帮助。</div>
                 </div>
                 <div class="become-expert-content">
                     <div class="row">
                         <div class="col-lg-4">
-                            <h3 class="H3">不管您的项目需要什么样的帮助，我们都准备好了用我们的专业知识改善您的业务运营。</h3>
+                            <h3 class="H3">无论您需要帮助的项目目前处于哪个阶段，我们都准备好分享我们的专业知识并改进您的业务流程。</h3>
                         </div>
                         <div class="col-lg-4">
                             <div class="row bold-list">
                                 <ul>
-                                    <li>技术咨询和建议</li>
-                                    <li>区块链初创企业咨询</li>
+                                    <li>技术咨询与建议</li>
+                                    <li>区块链创业咨询</li>
                                     <li>企业级区块链项目协助</li>
-                                    <li>智能合约审计</li>
+                                    <li>智能合约审核</li>
+
                                 </ul>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="row bold-list">
                                 <ul>
-                                    <li>区块链安全方面建议</li>
-                                    <li>基于区块链的解决方案的法律支持</li>
-                                    <li>点对点的咨询服务</li>
+                                    <li>区块链安全的建议</li>
+                                    <li>区块链解决方案的法律支持</li>
+                                    <li>一对一咨询服务</li>
                                 </ul>
                             </div>
                         </div>
@@ -214,7 +213,7 @@
         <div class="research-expertise">
             <div class="container">
                 <h2>我们在区块链开发方面的专业知识</h2>
-                <div class="h4 gor-100">我们帮助合作伙伴从一系列行业领导者中选择最合适的区块链技术，包括超级账本，比特股，EOSIO和以太坊。</div>
+                <div class="h4 gor-100">我们帮助合作伙伴从一系列行业领先的区块链中选择最合适的区块链技术，包括Hyperledger(超级账本)，BitShares(比特股)，EOSIO和Ethereum(以太坊)。</div>
                 <div class="gor-100">
                     <div class="row advisory-icons sc-icons retail-icons research-expertise-icons">
 
@@ -244,7 +243,7 @@
 
                         <div class="col-lg-6 col-md-12 col-sm-12 df">
                             <div class="ico"></div>
-                            <h3><a class="link-black" href="/services/blockchain-development/">区块链发展</a></h3>
+                            <h3><a class="link-black" href="/services/blockchain-development/">区块链开发</a></h3>
                         </div>
 
                         <div class="col-lg-6 col-md-12 col-sm-12 df">
