--- a/views/solutions/supply-chain.ejs
+++ b/views/solutions/supply-chain.ejs
@@ -54,7 +54,7 @@
             <h2>传统的供应链存在各种问题</h2>
             <div class="row">
                 <div class="col-md-4 font-weight-bold">
-                    <p>从小规模的批发商到经销商或是全球跨国贸易公司得供应链都存在着相同的危险和障碍</p>
+                    <p>从小规模的批发商到经销商或是国际贸易公司得供应链都存在着相同的危险和障碍</p>
                 </div>
                 <div class="col-md-4 text_challenges_2-md">
                     <ul>
