底部导航链接

--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -145,7 +145,7 @@
                             <li id="menu-item-71"
                                 class="arrow menu-item menu-item-type-post_type menu-item-object-services menu-item-71">
                                 <a title="Blockchain development"
-                                    href="./services-blockchain-development.html">区块链开发</a>
+                                    href="/services/blockchain-development">区块链开发</a>
                             </li>
                             <!-- <li id="menu-item-1818"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1818"><a
@@ -153,7 +153,7 @@
                             </li> -->
                             <li id="menu-item-1819"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1819"><a
-                                    title="Blockchain solutions" href="javascript:void(0)">区块链解决方案</a>
+                                    title="Blockchain solutions" href="/solutions">区块链解决方案</a>
                             </li>
                             <!-- <li id="menu-item-73"
                                 class="menu-item menu-item-type-custom menu-item-object-custom menu-item-73"><a
