update solutions index

--- a/views/solutions/index.ejs
+++ b/views/solutions/index.ejs
@@ -68,8 +68,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
-                    <h1>企业区块链解决方案开发</h1>
-                    <div class="h2-banner h2-banner-indents">通过区块链优化的流程、透明的操作和对资产的完全即使控制来促进您的业务需求</div>
+                    <h1>区块链行业解决方案</h1>
+                    <div class="h2-banner h2-banner-indents">通过区块链优化后的流程以及透明的操作和对资产的完全即时的控制来促进您的业务</div>
                     <a href="#contact" class="link">获取报价</a>
                     <div class="bg"></div>
                 </div>
@@ -83,7 +83,7 @@
                     <h2 class="h1 color-h2 m-0 p-0">我们的解决方案</h2>
                 </div>
                 <div class="col-md-6">
-                    OpenLedger为企业开发自定义端到端的区块链解决方案。我们运用我们丰富的知识和经验，创造复杂、大规模、有效的解决方案来满足您的行业和业务需求。我们为各种行业提供区块链产品。</div>
+                    OpenLedger为企业一对一定制设计开发区块链解决方案。我们运用丰富的经验和知识能够设计开发复杂、大规模、且有效的解决方案来满足您的行业和业务的需求。</div>
             </div>
         </div>
         <div class="container">
@@ -97,11 +97,11 @@
                     <div class="background-white two-column">
                         <h3>区块链的应用</h3>
                         <ul class="two-column">
-                            <li>去中心化的公共注册</li>
+                            <li>去中心化的开放式注册</li>
                             <li>多重签名的交易</li>
                             <li>投资基金和平台</li>
-                            <li>事务跟踪系统</li>
-                            <li>数字投票和文件批准</li>
+                            <li>事物（交易）跟踪系统</li>
+                            <li>数字投票和文件审批</li>
                         </ul>
                     </div>
                 </div>
