--- a/views/services/blockchain-development.ejs
+++ b/views/services/blockchain-development.ejs
@@ -38,8 +38,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-12">
-                    <h1>使用区块链技术开发您的业务</h1>
-                    <div class="h2-banner h2-border color-white">我们的研发团队提供完善的区块链定制化开发和技术解决方案，用技术助力你的行业。</div>
+                    <h1>区块链开发</h1>
+                    <div class="h2-banner h2-border color-white"><br>我们提供不同行业的区块链定制化开发和解决方案<br><br>改造您企业现有的业务</div>
                     <a href="#contact" class="link">现在联系</a>
                 </div>
                 <div class="col-md-6 banner-bg d-none d-md-block"></div>
@@ -51,14 +51,14 @@
 
         <div class="container">
             <div class="bubbles-wrap">
-                <h2>区块链技术已经渗透到各行业</h2>
+                <h2>区块链目前涉及到的行业和领域</h2>
                 <div class="h4 gor-100">区块链技术正在推动或者开始颠覆许多行业的发展理念，包括：</div>
                 <div class="bubbles">
                     <div class="bubble bubble-1 s-130">保险</div>
                     <div class="bubble bubble-2 s-90">法律</div>
                     <div class="bubble bubble-3 s-130">卫生保健</div>
                     <div class="bubble bubble-4 s-90">零售</div>
-                    <div class="bubble bubble-5 s-120">后勤</div>
+                    <div class="bubble bubble-5 s-120">物流运输</div>
                     <div class="bubble bubble-6 s-90">旅行</div>
                     <div class="bubble bubble-7 s-120">人力资源</div>
                     <div class="bubble bubble-8 s-135">教育</div>
@@ -73,11 +73,11 @@
         </div>
         <% include ../common/quote.ejs %>
         <div class="container">
-            <h2>区块链定制开发</h2>
+            <h2>区块链定制化开发</h2>
             <div class="gor-100 clearfix">
                 <div>
-                    <div class="h4">我们的开发团队帮助您构建基于区块链技术的应用程序，并且根据您的需求为您设计该程序的功能。</div>
-                    <div class="h4">我们帮助合作伙伴从众多行业领先的区块链底层系统（比特股，EOS，超级账本和以太坊等）中选择出最合适您的系统。
+                    <div class="h4">我们能够帮助您构建基于区块链技术的应用程序，并且根据您的需求为您设计功能。</div>
+                    <div class="h4">我们从众多行业领先的区块链底层系统（比特股，EOS，超级账本和以太坊等）中根据您的实际情况和需求选择出最合适您的系统。
                     </div>
                 </div>
             </div>
@@ -107,7 +107,7 @@
                         <div class="point point-accordion">
                             <h3>智能合约和智能钱包</h3>
                             <div class="text">
-                                <p>自动执行的合约，通过时间或者事件触发的方便且快捷的钱包支付</p>
+                                <p>自动执行的合约，通过时间或者事件触发支付功能的钱包。</p>
                             </div>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
                         <div class="point point-accordion">
                             <h3>安全身份验证</h3>
                             <div class="text">
-                                <p>去中心化网络的自动身份识别和权限认证。</p>
+                                <p>去中心化（无需第三方）的自动身份识别和权限认证。</p>
                             </div>
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                         <div class="point point-accordion">
                             <h3>安全分布式存储</h3>
                             <div class="text">
-                                <p>安全地存储您的数字资产且快速的访问，通过去中心化的身份认证设置访问者对该数字资产的访问权限。</p>
+                                <p>安全地存储您的一切数字资产，并且通过去中心化的身份认证设置该数字资产的访问权限。</p>
                             </div>
                         </div>
                     </div>
@@ -131,7 +131,7 @@
                         <div class="point point-accordion">
                             <h3>跨境业务的付款和转账</h3>
                             <div class="text">
-                                <p>简单、快速、低成本地跨货币和跨国界的付款和收款。</p>
+                                <p>简单、快速、低成本地跨货币和跨国界的付款和收款功能。</p>
                             </div>
                         </div>
                     </div>
@@ -230,7 +230,7 @@
                                     <h2 class="h1 color-h2 m-0 p-0">服务流程</h2>
                                 </div>
                                 <div class="col-md-6">
-                                    <p>成功的定制区块链项目需要良好的技能和流程的把控。我们使用精心设计的区块链开发流程，结合敏捷开发流程，让您的项目完全按照您的业务要求实现。</p>
+                                    <p>成功的定制区块链项目需要专业的技能和严格的项目流程把控。我们使用精心设计的区块链开发流程结合敏捷开发流程，让您的项目完全按照您的需求实现。</p>
                                     <p>OpenLedger内部团队包括产品经理、需求分析人员、架构师、开发人员、质量保证专家和其他专业人士，他们将在下面介绍的阶段中启动、设计、规划并交付一个定制的区块链解决方案：
                                     </p>
                                 </div>
