--- a/views/services/blockchain-development.ejs
+++ b/views/services/blockchain-development.ejs
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-12">
-                    <h1>区块链开发</h1>
+                    <h1>区块链开发服务</h1>
                     <div class="h2-banner h2-border color-white"><br>我们提供不同行业的区块链定制化开发和解决方案<br><br>改造您企业现有的业务</div>
                     <a href="#contact" class="link">现在联系</a>
                 </div>
