--- a/views/services/graphene-bitshares.ejs
+++ b/views/services/graphene-bitshares.ejs
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
-                    <h1>石墨烯和比特股开发</h1>
+                    <h1>石墨烯和比特股开发服务</h1>
                     <div class="h2-banner">企业整合</div>
                     <div class="text">
                         <div>
