--- a/views/services/index.ejs
+++ b/views/services/index.ejs
@@ -110,7 +110,7 @@
 
                     <div class="col-md-6">
                         <div class="tile">
-                            <h3>石墨烯和比特股(BitShares)开发</h3>
+                            <h3>石墨烯和比特股(BitShares)开发服务</h3>
                             <div class="text">我们的团队由经验丰富的石墨烯和比特股研发人员组成，他们能够把比特股区块链无缝的集成到您的企业流程中。<a class="teal-link"
                                     href="/services/graphene-bitshares">了解更多</a></div>
                         </div>
@@ -118,7 +118,7 @@
 
                     <div class="col-md-6">
                         <div class="tile">
-                            <h3>智能合约</h3>
+                            <h3>智能合约开发服务</h3>
                             <div class="text">OpenLedger的专家团队专注于使用超级账本(Hyperledger)，EOS和以太坊的智能合约的解决方案来解决现有行业问题。<a
                                     class="teal-link" href="/services/smart-contract">了解更多</a>
                             </div>
@@ -127,7 +127,7 @@
 
                     <div class="col-md-6">
                         <div class="tile">
-                            <h3>EOSIO</h3>
+                            <h3>EOSIO开发服务</h3>
                             <div class="text">EOSIO是一个具有出色运行速度的底层区块链平台，您可以在高度可拓展的环境中构建和运行去中心化的应用程序。<a class="teal-link"
                                     href="/services/eosio">了解更多</a></div>
                         </div>
