--- a/views/solutions/supply-chain.ejs
+++ b/views/solutions/supply-chain.ejs
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
-                    <h1>基于区块链技术<br>的供应链管理方案</h1>
+                    <h1>基于区块链技术<br>的供应链解决方案</h1>
                     <div class="h2-banner h2-banner-indents">区块链可以确保流程合理化, <br>操作透明和完全的资产控制</div>
                     <a href="#contact" class="link">获取报价</a>
                     <div class="bg"></div>
@@ -75,7 +75,7 @@
         </div>
 
         <div class="container">
-            <h2>为什么传统的供应链使用区块链技术会更好</h2>
+            <h2>为什么使用区块链技术的供应链会比使用传统技术的会更好</h2>
             <div class="row narrow">
                 <div class="col-md-6">
                     <div class="h4">改变企业供应链市场的格局</div>
