--- a/views/services/eosio.ejs
+++ b/views/services/eosio.ejs
@@ -39,11 +39,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
-                    <h1>EOSIO 开发</h1>
-                    <div class="h2-banner">可扩展的去中心化应用程序：<br>用于企业的区块链4.0</div>
+                    <h1>EOSIO开发服务</h1>
+                    <div class="h2-banner">可扩展的去中心化应用程序<br>用于企业的区块链4.0</div>
                     <div class="text">
                         <div>
-                            <div>EOSIO是一个具有较高速度的区块链，并且具有企业所需的安全性和权限结构。</div>
+                            <div>EOSIO是一个具有较高运行速度的区块链底层平台，<br>并且具有一般企业所需的安全性和基于角色的访问权限功能。</div>
                         </div>
                     </div>
                     <a href="#contact" class="link">现在联系</a>
@@ -57,7 +57,7 @@
             <div class="why-graphene-content why-eosio">
                 <h2>为什么选择EOSIO？</h2>
                 <div class="h4 gor-100">
-                    在通用的智能合约平台上构建和运行去中心化的应用程序可以为您企业的业务运营提供动力。拥有和传统程序相当的速度和易用性、基于角色的安全控制、无限的可扩展性、交互式的智能合约、快速开发和部署。</div>
+                    EOSIO拥有和传统应用相当的速度、基于角色的访问权限、无限的可扩展性、交互式的智能合约、快速开发和部署的易用性。</div>
                 <div class="point-list point-list-accordion">
                     <div class="row">
 
@@ -65,7 +65,7 @@
                             <div class="point point-accordion">
                                 <h3>企业级安全</h3>
                                 <div class="text">
-                                    <p>基于角色的权限控制使您可以将业务结构构建到关键任务Dapp中，从而确保不同的访问级别，同时保留完整的加密和可审计、可监督的活动日志。</p>
+                                    <p>基于角色的访问权限使您可以将业务结构构建到关键任务Dapp中，从而确保不同的访问级别，同时保留完整的加密和可审计、可监督的操作日志。</p>
                                 </div>
                             </div>
                         </div>
@@ -74,7 +74,7 @@
                             <div class="point point-accordion">
                                 <h3>可拓展性</h3>
                                 <div class="text">
-                                    <p>EOSIO支持数千个商业规模的Dapp。DPoS区块链结构使操作保持在链上，并对使用的规模没有限制。</p>
+                                    <p>EOSIO支持数千个商业规模的Dapp。基于DPoS共识机制可使所有操作保持在链上，并对使用的规模没有限制。</p>
                                 </div>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                             <div class="point point-accordion">
                                 <h3>Dapps适用于每一个行业</h3>
                                 <div class="text">
-                                    <p>用EOSIO编写的去中心化应用程序可以满足包括您在内的多个行业和垂直领域的业务需求。</p>
+                                    <p>用EOSIO编写的Dapp可以满足不同的行业以及垂直领域的业务需求。</p>
                                 </div>
                             </div>
                         </div>
@@ -91,17 +91,17 @@
                 </div>
             </div>
             <div class="enhance-business-content eosio-every-business">
-                <h2>EOSIO：</h2>
+                <h2>EOSIO：不同的业务、不同的流程都建立在这个目前属于全球最快的公链上。</h2>
                 <div class="gor-100">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="h4">
-                                <p>每个业务，每个流程建立在这个全球最快的公链上，EOSIO Dapps可以改进数据安全和速度相关的所有业务功能。</p>
+                                <p>EOSIO的Dapp可以改进您企业中数据的安全和所有与速度相关的功能或者业务。</p>
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <p>EOSIO Dapps易于使用、速度极快且可无限拓展，为您的业务流程提供了安全性、透明性和自动化。</p>
-                            <p>EOSIO是基于DPoS共识算法构建的，目前能够处理1000到6000个TPS，并且具有500Ms的区块生成间隔，而且预计有更快的速度。可用性、可伸缩性、通用的智能合约、api和高性能使其成为企业的最佳选择。
+                            <p>EOSIO的Dapp易于使用、速度快且可无限拓展，为您的业务流程提供了安全性、透明性和自动化。</p>
+                            <p>EOSIO是基于DPoS共识机制创建的，目前能够处理1000到6000个TPS，并且具有500Ms的区块生成间隔，而且预计有更快的速度。可用性、可伸缩性、通用的智能合约、api和高性能使其成为企业的最佳选择。
                             </p>
                         </div>
                     </div>
@@ -111,7 +111,7 @@
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
                             <h3>智能合约API</h3>
-                            <div class="text">使用C和C++语言，用EOSIO API将EOSIO智能合约构建到您现有的业务软件中。方便的获得EOSIO智能合约的效率和安全性。<div
+                            <div class="text">使用C和C++语言，用EOSIO的API将它的智能合约和您现有的软件紧密结合。更快捷的获得EOSIO智能合约的效率和安全性。<div
                                     class="fade-out"></div>
                             </div>
                         </div>
@@ -121,7 +121,7 @@
                         <div class="tile tile-collapse">
                             <h3>性能</h3>
                             <div class="text">
-                                EOSIO现在的速度很快，而且越来越快。开发团队的既定目标是将TPS扩展到无限。与Pow区块链不同，EOSIO的结构意味着随着规模的扩大，它可以加速而不是减慢速度。
+                                EOSIO现在的速度是非常快的，而且将来也会越来越快。开发团队的既定目标是将TPS扩展到无限。与Pow区块链不同，EOSIO的技术架构决定了随着规模的扩大，它的速度会加快而不是减慢。
                                 <div class="fade-out"></div>
                             </div>
                         </div>
@@ -131,7 +131,7 @@
                         <div class="tile tile-collapse">
                             <h3>易用性</h3>
                             <div class="text">
-                                通过基于权益的访问，最终用户无需支付交易费用。借助易于使用的Dapp，他们不需要技术经验和技能。EOSIO允许终端用户做他们需要做的事情，而由Dapp所有者来支持网络。
+                                通过基于权益的访问，用户无需支付合约的交易费用而是由Dapp的所有者来支付网络的费用。
                                 <div class="fade-out"></div>
                             </div>
                         </div>
@@ -141,7 +141,7 @@
                         <div class="tile tile-collapse">
                             <h3>快速部署</h3>
                             <div class="text">
-                                简单的开发方法意味着EOSIO Dapps可以快速启动并运行。快速而有信心地从构思到部署。
+                                EOSIO的Dapp开发和部署都非常简单、方便，因此您可以快速的开发、部署并运行您的项目。
                                 <div class="fade-out">
                                 </div>
                             </div>
@@ -151,7 +151,7 @@
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
                             <h3>交互式智能合约</h3>
-                            <div class="text">EOSIO智能合约永无止境地运行，并且没有时间限制，并且任何数量的智能合约都可以相互交互-区块链的ITTT，具有无限的业务应用程序。<div
+                            <div class="text">EOSIO的智能合约会永无止境的运行，并且没有时间限制。任何数量的智能合约都可以相互交互-区块链的ITTT，具有无限的业务应用程序。<div
                                     class="fade-out"></div>
                             </div>
                         </div>
@@ -160,7 +160,7 @@
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
                             <h3>自动化管理与合规性</h3>
-                            <div class="text">默认情况下，数据输入和检索是自动进行的，就像创建不可变审计跟踪一样。满足保存记录的要求，并能很容易地证明合规性。<div
+                            <div class="text">默认情况下，数据输入和检索是自动进行的，就像创建不可篡改、可审计、可监督和可追踪的记录一样，因此能很容易地证明其合规性。<div
                                     class="fade-out"></div>
                             </div>
                         </div>
@@ -180,7 +180,7 @@
                     <div class="col-md-4">
                         <div class="tile tile-collapse point-accordion-plus">
                             <h3>去中心化应用</h3>
-                            <div class="text">EOSIO允许用户根据所需功能使用EOS通证或自己的通证创建去中心化应用程序。</div>
+                            <div class="text">EOSIO可以根据您的需求使用EOS通证或自己的通证创建（Dapp）去中心化应用程序。</div>
                         </div>
                     </div>
 
@@ -195,7 +195,7 @@
                         <div class="tile tile-collapse point-accordion-plus">
                             <h3>数字钱包</h3>
                             <div class="text">
-                                创建钱包和帐户，安全地存储公钥-私钥，并确保通证安全。
+                                创建钱包和帐户，安全地存储公钥-私钥，并确保通证的安全。
                             </div>
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                     <div class="col-md-4">
                         <div class="tile tile-collapse point-accordion-plus">
                             <h3>去中心化交易所</h3>
-                            <div class="text">直接在区块链上轻松构建功能齐全的交易所：不会被攻击且速度非常快。</div>
+                            <div class="text">直接基于EOSIO平台开发的交易所不会被攻击且速度非常快。</div>
                         </div>
                     </div>
                     <div class="col-md-4 tiles-label-img hidden-768">
@@ -222,101 +222,6 @@
                 </div>
             </div>
         </div>
-        <div class="explore-blockchain-solutions explore-blockchain-solutions-eosio">
-            <div class="container">
-                <h2 class="mt-40">您所在行业的EOSIO</h2>
-                <div class="gor-100">
-                    <div class="h4">
-                        我们致力于区块链的解决方案，并且我们的团队拥有丰富的经验，能够将企业与EOSIO中的工具和Dapp功能相结合为多个垂直领域和行业的案例构建和部署这些Dapp
-                    </div>
-                </div>
-                <div class="explore-blockchain-solutions-content">
-                    <div class="slider-explore-blockchain-solutions">
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="/images/Uploads/01.svg" alt="Supply chain">
-                            </div>
-                            <h3 class="explore-slide-title">供应链</h3>
-                            <p class="explore-slide-desc">如果您对供应链的各种区块链解决方案感兴趣，我们将提供丰富的经验和专业知识。</p>
-                            <a href="/solutions/blockchain-supply-chain/" class="explore-slide-link link">了解更多</a>
-                        </div>
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="/images/Uploads/02.svg" alt="IoT">
-                            </div>
-                            <h3 class="explore-slide-title">物联网</h3>
-                            <p class="explore-slide-desc">OpenLedger提供了创新的解决方案，将物联网与加密的，不变的，可审计的区块链相结合。</p>
-                            <a href="/solutions/blockchain-iot/" class="explore-slide-link link">了解更多</a>
-                        </div>
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="/images/Uploads/Logistics-1.svg" alt="Logistics">
-                            </div>
-                            <h3 class="explore-slide-title">后勤</h3>
-                            <p class="explore-slide-desc">利用区块链技术改善您的物流流程，以获得竞争优势并降低运营成本。</p>
-                            <a href="/solutions/blockchain-logistics/" class="explore-slide-link link">了解更多</a>
-                        </div>
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="/images/Uploads/Healthcare-1.svg" alt="Healthcare">
-                            </div>
-                            <h3 class="explore-slide-title">卫生保健</h3>
-                            <p class="explore-slide-desc">使用区块链技术可以更好地保护隐私，有效地交换数据并在医疗保健中保护患者数据。</p>
-                            <a href="/solutions/blockchain-healthcare/" class="explore-slide-link link">了解更多</a>
-                        </div>
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="/images/Uploads/real-estate.svg" alt="Real estate">
-                            </div>
-                            <h3 class="explore-slide-title">不动产</h3>
-                            <p class="explore-slide-desc">探索区块链在不动产中的优势，包括数据管理和财务处理优化。</p>
-                            <a href="/solutions/blockchain-real-estate/" class="explore-slide-link link">了解更多</a>
-                        </div>
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="/images/Uploads/Insurance.svg" alt="Insurance">
-                            </div>
-                            <h3 class="explore-slide-title">保险</h3>
-                            <p class="explore-slide-desc">转变您的关键流程并利用区块链在保险行业中的潜力。</p>
-                            <a href="/solutions/blockchain-insurance/" class="explore-slide-link link">了解更多</a>
-                        </div>
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="/images/Uploads/automotive.svg" alt="Automotive">
-                            </div>
-                            <h3 class="explore-slide-title">汽车行业</h3>
-                            <p class="explore-slide-desc">无论是拼车，制造，车辆跟踪，汽车互动，区块链都能为您的业务提供动力。</p>
-                            <a href="/solutions/blockchain-automotive/" class="explore-slide-link link">了解更多</a>
-                        </div>
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="/images/Uploads/retail.svg" alt="Retail">
-                            </div>
-                            <h3 class="explore-slide-title">零售</h3>
-                            <p class="explore-slide-desc">利用零售区块链建立消费者信任，提高供应链可管理性，防止假冒商品。</p>
-                            <a href="/solutions/blockchain-retail/" class="explore-slide-link link">了解更多</a>
-                        </div>
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="/images/Uploads/education.svg" alt="Education">
-                            </div>
-                            <h3 class="explore-slide-title">教育</h3>
-                            <p class="explore-slide-desc">OpenLedger带来了一支经验丰富的区块链开发人员团队，并为教育项目创建了自定义解决方案。</p>
-                            <a href="/solutions/blockchain-education/" class="explore-slide-link link">了解更多</a>
-                        </div>
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="/images/Uploads/charity.svg" alt="Charity">
-                            </div>
-                            <h3 class="explore-slide-title">慈善机构</h3>
-                            <p class="explore-slide-desc">与捐助者，受助者和其他利益相关者建立信任，确保援助到达合适的人，并提高管理成本。</p>
-                            <a href="/solutions/blockchain-charity/" class="explore-slide-link link">了解更多</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </div>
     <!-- Content End -->
 
