--- a/views/services/smart-contract.ejs
+++ b/views/services/smart-contract.ejs
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-12">
-                    <h1>智能合约开发</h1>
+                    <h1>智能合约开发服务</h1>
                     <div class="h2-banner">以太坊，超级账本和EOS智能合约的审核和开发</div>
                     <div class="text">
                         <div>
@@ -59,7 +59,7 @@
                 <div class="h4 gor-100">
                     <p>智能合约是编码为计算机协议的虚拟协议。</p>
                     <p>任何一方，包括两个协议持有人，都不能改变智能合约的内容。必须更改整个网络，才有可能被修改。</p>
-                    <p>智能合约是可以自动执行的，因此智能合约是实现跨各行业、领域程序的强大工具。OpenLedger的专家团队致力于基于以太坊，超级账本和EOS的智能合约为现有行业所面临的问题提供基于智能合约的解决方案。
+                    <p>智能合约是可以自动执行的，因此智能合约是实现跨各行业、领域的强大工具。OpenLedger的专家团队致力于基于以太坊，超级账本和EOS的智能合约为现有行业所面临的问题提供基于智能合约的解决方案。
                     </p>
                 </div>
                 <div class="industry-is-covered-list sc-list">
