--- a/views/services/eosio.ejs
+++ b/views/services/eosio.ejs
@@ -40,10 +40,10 @@
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
                     <h1>EOSIO 开发</h1>
-                    <div class="h2-banner">可扩展的去中心化应用程序：<br>用于企业的区块链4.0</div>
+                    <div class="h2-banner">可扩展的去中心化应用程序：<br>适用于企业的区块链4.0</div>
                     <div class="text">
                         <div>
-                            <div>EOSIO是一个具有较高速度的区块链，并且具有企业所需的安全性和权限结构。</div>
+                            <div>EOSIO是一个具有较高速度的区块链，并且具有企业所需的安全性和权限管理模块。</div>
                         </div>
                     </div>
                     <a href="#contact" class="link">现在联系</a>
@@ -57,7 +57,8 @@
             <div class="why-graphene-content why-eosio">
                 <h2>为什么选择EOSIO？</h2>
                 <div class="h4 gor-100">
-                    在通用的智能合约平台上构建和运行去中心化的应用程序可以为您企业的业务运营提供动力。拥有和传统程序相当的速度和易用性、基于角色的安全控制、无限的可扩展性、交互式的智能合约、快速开发和部署。</div>
+                    在通用的智能合约平台上构建和运行去中心化的应用程序可以为您企业的办事效率大大提升。<br>拥有和传统程序相当的速度和易用性、基于角色的安全控制、无限的可扩展性、交互式的智能合约、快速开发和部署。
+                </div>
                 <div class="point-list point-list-accordion">
                     <div class="row">
 
@@ -65,7 +66,7 @@
                             <div class="point point-accordion">
                                 <h3>企业级安全</h3>
                                 <div class="text">
-                                    <p>基于角色的权限控制使您可以将业务结构构建到关键任务Dapp中，从而确保不同的访问级别，同时保留完整的加密和可审计、可监督的活动日志。</p>
+                                    <p>基于角色的权限控制使您可以将关键的业务用dapp构建，确保不同访问级别的权限把控，并且保留了加密的活动日志用于后期审计。</p>
                                 </div>
                             </div>
                         </div>
@@ -96,13 +97,13 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="h4">
-                                <p>每个业务，每个流程建立在这个全球最快的公链上，EOSIO Dapps可以改进数据安全和速度相关的所有业务功能。</p>
+                                <p>只要是与数据安全和速度相关的业务功能都能使用EOSIO的Dapp进行改进。</p>
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <p>EOSIO Dapps易于使用、速度极快且可无限拓展，为您的业务流程提供了安全性、透明性和自动化。</p>
-                            <p>EOSIO是基于DPoS共识算法构建的，目前能够处理1000到6000个TPS，并且具有500Ms的区块生成间隔，而且预计有更快的速度。可用性、可伸缩性、通用的智能合约、api和高性能使其成为企业的最佳选择。
-                            </p>
+                            <p>EOSIO的Dapp易于使用、速度极快并且可以无限拓展，为您的业务流程提供了安全性、透明性和自动化。</p>
+                            <p>EOSIO基于DPoS共识机制，目前能够处理1000到6000TPS，并且每秒可以打包500MB大小的区块，且预计有更快的速度。</p>
+                            <p>EOSIO的高可用性、可拓展性、可编程的智能合约、底层系统的API和超高性能使其成为企业的最佳选择。</p>
                         </div>
                     </div>
                 </div>
@@ -111,7 +112,7 @@
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
                             <h3>智能合约API</h3>
-                            <div class="text">使用C和C++语言，用EOSIO API将EOSIO智能合约构建到您现有的业务软件中。方便的获得EOSIO智能合约的效率和安全性。<div
+                            <div class="text">使用C和C++语言，用EOSIO的底层API将EOSIO的智能合约嵌入到您现有的业务软件中，即获得EOSIO智能合约的效率和安全性。<div
                                     class="fade-out"></div>
                             </div>
                         </div>
@@ -121,7 +122,7 @@
                         <div class="tile tile-collapse">
                             <h3>性能</h3>
                             <div class="text">
-                                EOSIO现在的速度很快，而且越来越快。开发团队的既定目标是将TPS扩展到无限。与Pow区块链不同，EOSIO的结构意味着随着规模的扩大，它可以加速而不是减慢速度。
+                                EOSIO现在的速度很快，而且预计会越来越快，它的开发团队暂时定的目标是将TPS扩展到无限，并且基于DPoS共识机制的EOSIO意味着随着应用规模的扩大，它的速度反而会越来越快而不是越来越慢。
                                 <div class="fade-out"></div>
                             </div>
                         </div>
@@ -131,7 +132,8 @@
                         <div class="tile tile-collapse">
                             <h3>易用性</h3>
                             <div class="text">
-                                通过基于权益的访问，最终用户无需支付交易费用。借助易于使用的Dapp，他们不需要技术经验和技能。EOSIO允许终端用户做他们需要做的事情，而由Dapp所有者来支持网络。
+                                通过基于权益的访问，智能合约的交易费用是由Dapp的所有者来支付而不是终端用户支付。<br><br>
+                                通过易于使用的Dapp，用户不需要专业的技能，用起来起来就像传统的应用程序。
                                 <div class="fade-out"></div>
                             </div>
                         </div>
@@ -141,7 +143,7 @@
                         <div class="tile tile-collapse">
                             <h3>快速部署</h3>
                             <div class="text">
-                                简单的开发方法意味着EOSIO Dapps可以快速启动并运行。快速而有信心地从构思到部署。
+                                EOSIO的Dapp易于开发，且对开发者非常友好，因此在从产品的设计、开发到部署的过程中从技术角度上来说都不会太困难。
                                 <div class="fade-out">
                                 </div>
                             </div>
@@ -151,7 +153,7 @@
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
                             <h3>交互式智能合约</h3>
-                            <div class="text">EOSIO智能合约永无止境地运行，并且没有时间限制，并且任何数量的智能合约都可以相互交互-区块链的ITTT，具有无限的业务应用程序。<div
+                            <div class="text">EOSIO的智能合约可以永无止境地运行，且没有时间的限制，并且任何数量的智能合约都可以相互交互-区块链的ITTT，具有无限的业务应用程序。<div
                                     class="fade-out"></div>
                             </div>
                         </div>
