--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,14 +68,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-12">
-                    <h1>用区块链技术优化<br>您现有的业务模式</h1>
+                    <h1>用区块链技术改进<br>您现有的业务模式</h1>
                     <div class="h2-banner h2-border color-white">
-                        将区块链技术和您所在的行业相结合<br>为创业公司提供技术支持<br>帮助您的企业简化流程 提高效率 确保公平
-                        公正</div>
+                        将区块链技术和您所在的行业的业务相结合<br>我们可以提供技术和解决方案，帮助您的企业简化办事流程、提高办事效率，并确保制度的公平和公正。</div>
                     <div class="banner-text">
-                        OpenLedger提供区块链技术解决方案和定制化区块链开发，用技术去推动各个行业商业模式的转变，为真正的商业转型提供动力。
-                        <br><br>基于革命性的去中心化网络来构建新业务工具，永远改变您的行业。
-                        <br><br>在我们提供的区块链技术服务上建立您的愿景,或者创建您自己的网络并完全分布式和安全地在上面经营您的业务。
+                        OpenLedger提供区块链技术解决方案和定制化区块链系统的开发，用技术去推动各个行业、商业模式从传统到区块链技术的改变，为真正的商业转型提供动力。
+                        <br><br>基于革命性的去中心化网络来构建新的业务管理软件。
+                        <br><br>在我们提供的区块链技术服务上建立您的愿景,或者创建您自己的区块链网络并安全地在上面开展您的业务。
                     </div>
                 </div>
                 <div class="col-md-6 banner-bg d-none d-md-block"></div>
@@ -93,9 +92,9 @@
             <div class="col-md-6 image-block-right text-left">
                 <h2>区块链开发</h2>
                 <div class="text">
-                    OpenLedger提供经验丰富的区块链技术团队来提供专业技术服务，为金融科技、娱乐、保险和其他行业的业务伙伴提供定制化解决方案。
+                    OpenLedger拥有经验丰富的区块链技术团队来提供技术服务并且为金融科技、娱乐、保险和其他行业的合作伙伴们提供定制化的解决方案。
                     <br><br>
-                    我们基于最受欢迎的区块链系统，包括Hyperledger(超级账本)、EOS、BitShares(比特股)和Ethereum(以太坊)，来进行业务开发，并且根据您现有的业务情况来提供最优的去中心化技术解决方案。
+                    我们基于最受欢迎的区块链系统，包括Hyperledger(超级账本)、EOS、BitShares(比特股)和Ethereum(以太坊)，来进行业务开发，并且根据您现有的业务情况来设计最优的解决方案。
                 </div>
                 <a href="#contact" class="link">联系我们</a>
             </div>
@@ -104,9 +103,9 @@
             <div class="col-md-6 image-block-right text-right">
                 <h2>基于区块链的行业解决方案</h2>
                 <div class="text" style="text-align: left;">
-                    <br>OpenLedger为企业提供特定行业的区块链解决方案。
-                    <br><br>我们以丰富的区块链专业知识和多年区块链行业累积的经验来设计满足大规模复杂业务和安全高效的解决方案，以满足您的行业和业务需求。
-                    <br><br>通过区块链优化的流程、透明的运作和对企业资产的完全即时控制来促进您的业务增长。
+                    <br>OpenLedger为在不同行业的企业提供区块链的解决方案。
+                    <br><br>我们以丰富的专业知识和多年在区块链行业累积的经验可以设计满足大规模复杂的业务和安全高效的解决方案，以满足您的行业和业务的需求。
+                    <br><br>您可以通过基于区块链技术的业务管理、操作透明和对企业资产的即时控制来促进您企业的办事效率。
                 </div>
                 <a href="#contact" class="link">联系我们</a>
             </div>
@@ -124,7 +123,7 @@
             </div>
             <div class="col-md-6 image-block-right text-left">
                 <h2>区块链周边产品研发</h2>
-                <div class="text">openLedger不仅仅只提供块链定制开发,我们还提供包括Dapps、智能合约、区块浏览器、交易所对接工具，区块链钱包等区块链周边产品的研发服务，助您持续赢得商业成功。
+                <div class="text">openLedger不仅提供区块链系统的定制开发,我们还提供包括Dapp(去中心化应用程序)、智能合约、区块链浏览器、交易所通证对接、区块链钱包等区块链周边产品的研发服务。
                 </div>
                 <a href="#contact" class="link">更多</a>
             </div>
@@ -148,7 +147,7 @@
                 <div class="col-md-12 col-lg-6">
                     <p>我们是一家致力于将区块链技术的力量带到更广阔的商业领域的公司，公司CEO拥有多年的区块链行业产品研发和市场开拓经验。公司总部位于深圳。</p>
                     <p>OpenLedger拥有专业的软件开发和架构专家，为市场营销人员、业务分析师和技术支持人员提供强大的后盾。</p>
-                    <p>多年以来，我们一直与全国各地的客户合作，利用现有的区块链解决方案，构建新的去中心化应用程序，为合作伙伴的业务成功提供助力。</p>
+                    <p>多年以来，我们一直与全国各地的客户合作，利用现有的区块链解决方案，构建新的去中心化应用程序，为合作伙伴的业务转型助力。</p>
                 </div>
             </div>
         </div>
