--- a/views/services/blockchain-development.ejs
+++ b/views/services/blockchain-development.ejs
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-md-6 col-sm-12">
                     <h1>使用区块链技术开发您的业务</h1>
-                    <div class="h2-banner h2-border color-white">我们的研发团队提供完善的区块链定制化开发和技术解决方案，用技术助力你的行业。</div>
+                    <div class="h2-banner h2-border color-white">我们的研发团队提供完善的区块链定制化开发和技术解决方案。</div>
                     <a href="#contact" class="link">现在联系</a>
                 </div>
                 <div class="col-md-6 banner-bg d-none d-md-block"></div>
