--- a/views/services/hyperledger.ejs
+++ b/views/services/hyperledger.ejs
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
                     <h1>超级账本开发服务</h1>
-                    <div class="h2-banner h2-banner-indents">我们为您搭建一个先进的企业生态系统，通过超级账本可以保证该生态系统内的业务透明、不可篡改、可审计，可监督。</div>
+                    <div class="h2-banner h2-banner-indents">我们为您搭建一个先进的企业生态系统，通过超级账本可以保证该生态系统内的业务透明、不可篡改、可审计、可监督。</div>
                     <a href="#contact" class="link">现在联系</a>
                     <div class="bg"></div>
                 </div>
@@ -51,16 +51,16 @@
         <div class="container">
             <div class="why-graphene-content">
                 <h2>通过超级账本可以给您的业务带来哪些优势</h2>
-                <div class="h4 gor-100">超级账本通过在网络中的每一次事务的处理实现信任、透明、公平公正。通过精准的问责制度来提高您业务的效率。</div>
+                <div class="h4 gor-100">超级账本通过在网络中去中心化的事务处理实现信任、透明、公平公正。通过精准的问责制度来提高您业务的效率。</div>
                 <div class="gor-100">
                     <div class="row advisory-icons hyperledger-icons">
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-1"></div>
-                            <h3>技术架构模块化</h3>
+                            <h3>模块化的技术架构</h3>
                         </div>
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-2"></div>
-                            <h3>权限许可的网络</h3>
+                            <h3>加入网络需要权限许可</h3>
                         </div>
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-3"></div>
@@ -94,9 +94,9 @@
                             <div class="business-gain-point-info">
                                 <h3 class="across-toggle">保险</h3>
                                 <ul class="across-sub-menu">
-                                    <li>改进的多方合同</li>
+                                    <li>多方合同改进</li>
                                     <li>减少周转时间</li>
-                                    <li>改进的风险合同效率</li>
+                                    <li>风险合同效率改进</li>
                                     <li>改善KYC合规性</li>
                                     <li>减少身份盗用风险</li>
                                     <li>先进的预防欺诈</li>
