--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,10 +68,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-12">
-                    <h1>用区块链技术优化<br>您现有的业务模式</h1>
+                    <h1>用区块链优化<br>您现有的业务</h1>
                     <div class="h2-banner h2-border color-white">
-                        将区块链技术和您所在的行业相结合<br>为创业公司提供技术支持<br>帮助您的企业简化流程 提高效率 确保公平
-                        公正</div>
+                        把区块链融入到您所在的行业<br>帮助您的企业简化办公流程、提高办事效率，确保制度公平、公正、透明。
+                    </div>
                     <div class="banner-text">
                         OpenLedger提供区块链技术解决方案和定制化区块链开发，用技术去推动各个行业商业模式的转变，为真正的商业转型提供动力。
                         <br><br>基于革命性的去中心化网络来构建新业务工具，永远改变您的行业。
@@ -105,26 +105,24 @@
                 <h2>基于区块链的行业解决方案</h2>
                 <div class="text" style="text-align: left;">
                     <br>OpenLedger为企业提供特定行业的区块链解决方案。
-                    <br><br>我们以丰富的区块链专业知识和多年区块链行业累积的经验来设计满足大规模复杂业务和安全高效的解决方案，以满足您的行业和业务需求。
-                    <br><br>通过区块链优化的流程、透明的运作和对企业资产的完全即时控制来促进您的业务增长。
+                    <br><br>我们以丰富的区块链专业知识和多年区块链行业累积的经验来设计满足大规模复杂业务和安全高效的解决方案，以满足您企业的需求。
+                    <br><br>通过区块链优化的流程、透明的运作和对企业资产的完全即时控制来促进您企业的发展。
                 </div>
                 <a href="#contact" class="link">联系我们</a>
             </div>
             <div class="col-md-6 image-block">
-                <img src="/images/Uploads/Solutions-image-x.png"
-                    srcset="/images/Uploads/Solutions-image-@2x.png 2x"
+                <img src="/images/Uploads/Solutions-image-x.png" srcset="/images/Uploads/Solutions-image-@2x.png 2x"
                     alt="Blockchain solutions" />
             </div>
         </div>
         <div class="row block">
             <div class="col-md-6 image-block image-block-right">
-                <img src="/images/Uploads/Services-image-x.png"
-                    srcset="/images/Uploads/Services-image-@2x.png 2x"
+                <img src="/images/Uploads/Services-image-x.png" srcset="/images/Uploads/Services-image-@2x.png 2x"
                     alt="Blockchain services" />
             </div>
             <div class="col-md-6 image-block-right text-left">
                 <h2>区块链周边产品研发</h2>
-                <div class="text">openLedger不仅仅只提供块链定制开发,我们还提供包括Dapps、智能合约、区块浏览器、交易所对接工具，区块链钱包等区块链周边产品的研发服务，助您持续赢得商业成功。
+                <div class="text">openLedger不仅仅只提供块链定制开发,我们还提供包括Dapp、智能合约、区块浏览器、交易所对接工具，区块链钱包等区块链周边产品的研发服务。
                 </div>
                 <a href="#contact" class="link">更多</a>
             </div>
@@ -136,19 +134,15 @@
             <div class="row">
                 <div class="col-md-12 col-lg-6 sphere">
                     <h2>关于 OpenLedger</h2>
-                    <img class="img-fluid" src="/images/Uploads/about-home-icon1.svg"
-                        alt="" />
-                    <img class="img-fluid" src="/images/Uploads/about-home-icon2.svg"
-                        alt="" />
-                    <img class="img-fluid" src="/images/Uploads/about-home-icon3.svg"
-                        alt="" />
-                    <img class="img-fluid" src="/images/Uploads/about-home-icon4.svg"
-                        alt="" />
+                    <img class="img-fluid" src="/images/Uploads/about-home-icon1.svg" alt="" />
+                    <img class="img-fluid" src="/images/Uploads/about-home-icon2.svg" alt="" />
+                    <img class="img-fluid" src="/images/Uploads/about-home-icon3.svg" alt="" />
+                    <img class="img-fluid" src="/images/Uploads/about-home-icon4.svg" alt="" />
                 </div>
                 <div class="col-md-12 col-lg-6">
                     <p>我们是一家致力于将区块链技术的力量带到更广阔的商业领域的公司，公司CEO拥有多年的区块链行业产品研发和市场开拓经验。公司总部位于深圳。</p>
                     <p>OpenLedger拥有专业的软件开发和架构专家，为市场营销人员、业务分析师和技术支持人员提供强大的后盾。</p>
-                    <p>多年以来，我们一直与全国各地的客户合作，利用现有的区块链解决方案，构建新的去中心化应用程序，为合作伙伴的业务成功提供助力。</p>
+                    <p>多年以来，我们一直与全国各地的企事业单位合作，利用现有区块链的解决方案，构建新的去中心化应用程序，为合作伙伴的业务转型提供助力。</p>
                 </div>
             </div>
         </div>
