--- a/views/services/smart-contract.ejs
+++ b/views/services/smart-contract.ejs
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-lg-6 col-sm-12">
                     <h1>智能合约开发服务</h1>
-                    <div class="h2-banner">以太坊，超级账本和EOS智能合约的审核和开发</div>
+                    <div class="h2-banner">超级账本，以太坊和EOS智能合约的审核和开发</div>
                     <div class="text">
                         <div>
                             <div></div>
@@ -57,9 +57,9 @@
             <div class="industry-is-covered-content sc-content">
                 <h2>企业智能合约</h2>
                 <div class="h4 gor-100">
-                    <p>智能合约是编码为计算机协议的虚拟协议。</p>
-                    <p>任何一方，包括两个协议持有人，都不能改变智能合约的内容。必须更改整个网络，才有可能被修改。</p>
-                    <p>智能合约是可以自动执行的，因此智能合约是实现跨各行业、领域的强大工具。OpenLedger的专家团队致力于基于以太坊，超级账本和EOS的智能合约为现有行业所面临的问题提供基于智能合约的解决方案。
+                    <p>智能合约是一种编码为计算机协议的虚拟协议。</p>
+                    <p>任何一方，包括两个协议的持有人，都不能改变智能合约的内容。如果要想更改，必须由网络中所有的节点同意才能更改。</p>
+                    <p>智能合约是可以自动执行的，因此智能合约是实现跨各行业、领域的强大工具。OpenLedger的专家团队致力于基于超级账本、以太坊、和EOS的智能合约为现有行业所面临的问题提供解决方案。
                     </p>
                 </div>
                 <div class="industry-is-covered-list sc-list">
@@ -111,29 +111,26 @@
                         <div class="container">
                             <h2 class="mt-40">为什么您的企业需要智能合约开发服务？</h2>
                             <div class="gor-100">
-                                <div class="h4">如果您需要执行和贯彻您的企业经营理念，智能合约可以为您的企业带来多重便利。</div>
+                                <div class="h4">如果您需要执行和贯彻您的企业经营理念，智能合约可以为您的企业带来多重的便利。</div>
                             </div>
                             <div class="point-list point-list-accordion">
                                 <div class="row">
-
                                     <div class="col-md-4">
                                         <div class="point point-accordion">
                                             <h3>自治</h3>
                                             <div class="text">
-                                                <p>不需要中介参与，去掉了中间商节约了成本并且提高了业务流程的效率。</p>
+                                                <p>没有第三方参与，去掉了中间商节约了成本并且提高了业务流程的效率。</p>
                                             </div>
                                         </div>
                                     </div>
-
                                     <div class="col-md-4">
                                         <div class="point point-accordion">
                                             <h3>信任</h3>
                                             <div class="text">
-                                                <p>智能合约都是公开且透明的，可以确保企业和客户之间的交易或是达成的某种协议是可被验证的。</p>
+                                                <p>智能合约都是公开且透明的，可以确保企业和客户之间的交易或是达成的某种协议是可以被验证的。</p>
                                             </div>
                                         </div>
                                     </div>
-
                                     <div class="col-md-4">
                                         <div class="point point-accordion">
                                             <h3>节省资金</h3>
@@ -142,7 +139,6 @@
                                             </div>
                                         </div>
                                     </div>
-
                                     <div class="col-md-4">
                                         <div class="point point-accordion">
                                             <h3>备份</h3>
@@ -151,7 +147,6 @@
                                             </div>
                                         </div>
                                     </div>
-
                                     <div class="col-md-4">
                                         <div class="point point-accordion">
                                             <h3>准确性</h3>
@@ -160,7 +155,6 @@
                                             </div>
                                         </div>
                                     </div>
-
                                     <div class="col-md-4">
                                         <div class="point point-accordion">
                                             <h3>速度</h3>
@@ -178,23 +172,21 @@
                             <h2 class="mt-40">OpenLedger开发的智能合约</h2>
                             <div class="gor-100">
                                 <div class="h4">
-                                    <p>在以太坊(Ethereum)、EOS或超级账本(Hyperledger)中实现智能合约来自动化处理业务流程。</p>
-                                    <p>将传统的技术和区块链技术进行结合后可以根据您的业务需求量身定制合适的解决方案。我们的专家可以快速、安全地编写完全符合您业务需求的智能合约代码。</p>
+                                    <p>通过在以太坊(Ethereum)、EOS或超级账本(Hyperledger)中的智能合约来自动化处理业务流程。</p>
+                                    <p>通过基于区块链的解决方案和区块链的技术结合，我们的开发工程师可以快速编写安全地且符合您的需求的智能合约。</p>
                                 </div>
                             </div>
                             <div id="ethereum-smart-contracts"></div>
                             <div class="sc-implementation-items">
                                 <div
                                     class="row tiles-lable tiles-lable-collapse tiles-lable-collapse-new tiles-lable-sc">
-
                                     <div class="col-md-12">
                                         <div class="tile tile-collapse">
                                             <h3>以太坊智能合约</h3>
                                             <div class="text">
                                                 <div class="new-list-wrap">
                                                     <div class="new-list-col-4">
-                                                        <p>我们开发的智能合约具有高度的安全性和可靠性等特点，以满足您的业务需求。通过Solidity语言编写的智能合约能够最大限度地提高您公司效率。
-                                                        </p>
+                                                        <p>通过Solidity语言编写的智能合约能够最大限度地提高您公司的生产效率。</p>
                                                     </div>
                                                     <div class="new-list-col-8">
                                                         <div class="new-list">
