--- a/views/solutions/logistics.ejs
+++ b/views/solutions/logistics.ejs
@@ -107,7 +107,7 @@
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
                             <h3>流程自动化</h3>
-                            <div class="text">当满足了智能合约所设定的条件，就无需在手动的操作。智能合约可以自动执行出发、装运、所有权的变更和其它程序。</div>
+                            <div class="text">当满足了智能合约所设定的条件，就无需在手动的操作。智能合约可以自动执行出发、装运、所有权的变更和其它程序。</div>
                             <div class="fade-out"></div>
                         </div>
                     </div>
@@ -216,7 +216,7 @@
                                 <div class="dotted-arrow"></div>
                                 <ul class="manufacturer-point-list manufacturer-list">
                                     <li>提货单</li>
-                                    <li>Routing Instructions</li>
+                                    <li>线路提示</li>
                                     <li>发货日期</li>
                                     <li>商品描述</li>
                                 </ul>
@@ -242,7 +242,7 @@
                             <div class="manufacturer-point-content">
                                 <div class="dotted-arrow"></div>
                                 <ul class="manufacturer-point-list manufacturer-list">
-                                    <li> Routing Instructions</li>
+                                    <li>线路提示</li>
                                     <li>选择日期</li>
                                     <li>打包 </li>
                                     <li>技术指标</li>
@@ -294,81 +294,68 @@
         <!-- Quote -->
         <div class="logistics-processes">
             <div class="container">
-                <h2>What you gain by introducing blockchain into your logistics processes</h2>
+                <h2>通过区块链改善物流公司的流程</h2>
                 <div class="gor-100">
                     <div class="h4">
-                        Today, blockchain technology is reshaping the logistics industry, and many businesses are
-                        embracing the opportunity to rebuild their processes from the ground up in an innovative and
-                        profitable way.<br />
+                        如今，区块链技术正在重塑物流业，许多企业正在以创新和利益的角度开始重建流程。<br />
                         <br />
-                        Now is the time to seize the advantages of early adoption and enjoy the benefits of a logistics
-                        business that effectively utilizes blockchain, such as: </div>
+                        抓住早期引入区块链技术带来的行业竞争上的优势和享受有效利用区块链的物流业务的好处，例如：</div>
                 </div>
                 <div class="point-list point-list-accordion">
                     <div class="row">
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>Trust</h3>
+                                <h3>建立信任</h3>
                                 <div class="text">
-                                    <p>Transparency in information and traceability in the supply chain mean more trust
-                                        from partners and customers. What is more, the high level of confidence is
-                                        mutual and brings benefits not only for your company, but for all the
-                                        counterparties as well.</p>
+                                    <p>在供应链中数据的透明性和可追溯性使我们的合作伙伴和客户之间有更多的信任。而且信任是相互的，它不仅可以为您的公司带来好处，也可以为交易方带来好处。</p>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>Cost-efficiency</h3>
+                                <h3>减少成本</h3>
                                 <div class="text">
-                                    <p>By automating processes with smart contracts, you significantly reduce operating
-                                        costs. Additionally, a lot of operations can be performed much faster. Thus, you
-                                        will be able to serve more profitable business activities than before.</p>
+                                    <p>通过使用智能合约将业务流程自动化，可以大大降低运营成本。 除此之外，因为许多操作都是自动执行无需人工的干预， 因此，您的业务效率也会大大的提升。</p>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>Reputation</h3>
+                                <h3>提升信用</h3>
                                 <div class="text">
-                                    <p>Transparent, immutable ledgers enable you to demonstrate good faith, best
-                                        practices and regulatory compliance, enhancing your reputation.</p>
+                                    <p>透明、不可篡改的账本使您能充分展示您的诚信，从而提高您的信用。</p>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>Self-confidence</h3>
+                                <h3>提升自信</h3>
                                 <div class="text">
-                                    <p>Collaborations with contractors, partners and regulatory bodies are made
-                                        transparent and secure with blockchain; in case of disputes, complete, detailed
-                                        and accurate records are available to all parties.</p>
+                                    <p>区块链可使承包商、合作方和监管机构的合作变得安全和透明；任何一方如有争议，所有方均可以获得完整的记录。</p>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>Peace of mind</h3>
+                                <h3>安全放心</h3>
                                 <div class="text">
-                                    <p>In a blockchain-bases system, you retain ultimate control; data theft is
-                                        impossible, data forgery can be easily disproved thanks to automated, immutable
-                                        record-keeping.</p>
+                                    <p>在基于区块链的系统中，您拥有企业最终的控制权；数据盗窃是不可能发生的，通过自动、不可篡改的记账功能可以很容易的证明数据的伪造。</p>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>Competitiveness</h3>
+                                <h3>提高竞争力</h3>
                                 <div class="text">
-                                    <p>Early adopters will see significant competitive advantages from business
-                                        processes transformed by blockchain, including opportunities for enhanced
-                                        services and improved margins.</p>
+                                    <p>
+                                        早期的采用者将从区块链改变的业务流程中获得非常大的竞争优势，也包括改进服务和提高收益的机会。
+                                    </p>
                                 </div>
                             </div>
                         </div>
